# Ada

./: .env  .gitignore  CODING_AGENT_MVP_TECH_SPEC.md  Makefile  README.md  config.json  docker-compose.yml  main.py  requirements.txt  test_ada.py
coding-agent-infra/: .env  Makefile  (+1 more)
planning_agent_core/: .dockerignore  Dockerfile  README.md  agent-platform.example.json  alembic.ini  config.py  db.py  enums.py  main.py  prompts.py  pyproject.toml  requirements.txt
planning_agent_core/adapters/: neo4j_store.py
planning_agent_core/alembic/: env.py
planning_agent_core/alembic/versions/: 0001_current_baseline.py  0002_webhook_event_idempotency.py  0003_agent_job_leases.py  0004_agent_executions.py  0005_op_outbound_ops.py  0006_op_reconciliation.py  0007_approval_records.py  0008_repository_bindings.py  0009_repository_index.py  0010_coding_attempts.py  0011_agent_platform_persistence.py  0012_agent_platform_flows.py  0013_agent_flow_recovery_leases.py
planning_agent_core/api/: documents.py
planning_agent_core/planning_agent_core/: config.py  db.py  enums.py  llm.py  main.py  models.py  schemas.py
planning_agent_core/planning_agent_core/adapters/: command_runner.py  lsp.py  neo4j_store.py  openproject.py  redis_queue.py  repository_analysis.py  repository_filesystem.py  tree_sitter_analysis.py  weaviate_store.py
planning_agent_core/planning_agent_core/agent_platform/: __init__.py
planning_agent_core/planning_agent_core/agents/: __init__.py  registry.py
planning_agent_core/planning_agent_core/api/: agents.py  context.py  deps.py  events.py  planning.py  projects.py  provisioning.py  repositories.py
(+256 files in other folders)
