[project]
name = "planning-agent-core"
version = "0.2.0"
description = "Planning agent core with PostgreSQL source of truth, Neo4j relationship projection, Weaviate semantic memory, and OpenProject synchronization."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.12",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "neo4j>=5.25",
  "weaviate-client>=4.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
